2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.
Updated server.py to send a 200 OK HTTP message to client
Added Optional step to c.recv(1000)